<resources>
    <string name="app_name">Lingua App</string>
    <string name="logo_image_desc">Lingua App Logo</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="NewAccountText">Create Account</string>
    <string name="Sign_up">Sign up</string>
    <string name="go_back_to_login_screen">Go back to login Screen</string>
    <string name="reset_password">Reset password</string>
    <string name="ForgotText">Enter your email address and we will send you
    instructions to reset your password.</string>
    <string name="ForgotHeader">Forgot Your Password?</string>
    <string name="HintEmail">Email Address</string>
    <string name="NewAccount">Create Account</string>
    <string name="HintLogin">Login</string>
    <string name="account_question">Already have an account?</string>
    <string name="success_register">Successful Registration</string>
    <string name="thank_you_register">Thank you for your registration</string>
    <string name="settings">Settings</string>
</resources>