<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/logo_image_desc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LoginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextLabelLogin"
        app:startIconContentDescription="@string/login"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LoginInput"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextLabelPassword"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/PasswordInput"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ForgetPassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:layout_marginStart="60dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="#eee"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LoginButtonStyle"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NewAccountText"
                />
            <Button
                android:id="@+id/SignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sign_up"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>