<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">

    <!-- android:scaleX="0.6"
    android:scaleY="0.6"-->
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ForgotHeader"
        android:textSize="35sp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/ForgotText"
        android:textSize="18sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HintEmail"
        style="@style/TextLabelEmail"
        app:startIconContentDescription="@string/HintEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ForgotEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ForgotButtonStyle"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom">
        <Button
            android:id="@+id/GoBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/go_back_to_login_screen"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

</LinearLayout>